Fix title alignment

--- a/styles.css
+++ b/styles.css
@@ -99,15 +99,17 @@ body {
 
 .hero-content {
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     color: white;
-    max-width: 700px;
-    padding: 20px;
+    max-width: 600px;
+    margin-left: 40px;
 }
 
 .hero-title {
     font-size: 42px;
     font-weight: 700px;
-    margin-top: -30px;
     margin-bottom: 30px;
 }
 
@@ -115,8 +117,7 @@ body {
     display: flex;
     width: 100%;
     max-width: 600px;
-    margin-top: -30px;
-    margin: 0 auto;
+    margin: 20px 0,0,0;
     background: white;
     border-radius: 6px;
     overflow: hidden;
@@ -132,8 +133,9 @@ body {
 }
 
 .search-btn {
-    background: #0066ff;
-    color: white;
+    background: white;
+    color: rgb(32, 32, 186);
+    border: rgb(147, 139, 139);
     padding: 0 24px;
     font-size: 20px;
     cursor: pointer;
